# nav_server

./: .gitignore  readme.md
scripts/: sln.bat
src/: CMakeLists.txt  conanfile.txt
src/cmake/: setup_qt.cmake
src/gui/: app.html  package-lock.json  package.json  svelte.config.js
src/gui/src/: template.html
src/gui/src/routes/: +page.svelte
src/server/: CMakeLists.txt  app.cpp  app.hpp  http_server.cpp  http_server.hpp  main.cpp
