cmake_minimum_required(VERSION 3.24)

project(NavServer)

set(CMAKE_CXX_STANDARD 17)

set(RUNTIME_OUTPUT_DIR "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${RUNTIME_OUTPUT_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${RUNTIME_OUTPUT_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${RUNTIME_OUTPUT_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${RUNTIME_OUTPUT_DIR})

#list(APPEND CMAKE_PREFIX_PATH ${RUNTIME_OUTPUT_DIR})

include(cmake/setup_qt.cmake)

add_subdirectory(server)
